engine/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__app_link_view__tests__app_link_view_auth_suggestion_with_reason.snap
---
source: tui/src/bottom_pane/app_link_view.rs
expression: "render_snapshot(&view, Rect::new(0, 0, 72, view.desired_height(72)))"
---

  Google Calendar

  Reconnect Google Calendar on ChatGPT.

  URL
  https://chatgpt.com/apps/google-calendar/connector_google_calendar

  Sign in to this app in your browser, then return here.


› 1. Open sign-in URL
  2. Back
  tab / ↑ ↓ move · enter select · esc close
