engine/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__app_link_view__tests__app_link_view_generic_url_elicitation.snap
---
source: tui/src/bottom_pane/app_link_view.rs
expression: "render_snapshot(&view, Rect::new(0, 0, 72, view.desired_height(72)))"
---

  Action required
  Server: payments

  Review the payment details to continue.

  URL
  https://payments.example/checkout/123

  Complete the requested action in your browser, then return here.


› 1. Open link
  2. Back
  tab / ↑ ↓ move · enter select · esc close
